--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "element-ui": "^2.8.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "webpack-bundle-analyzer": "^3.3.2",
+    "vux": "^2.7.6",
+    "vux-loader": "^1.1.30"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
